Fix Dark mode for experience

--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -9,7 +9,7 @@ h2 {
   font-size: 28px;
   font-weight: bold;
   margin-bottom: 30px;
-  color: #3f51b5;
+  color: var(--accent-colour);
 }
 
 .experience-grid {
@@ -23,7 +23,7 @@ h2 {
   flex-direction: column;
   align-items: flex-start;
   padding: 20px;
-  background: #ffffff;
+  background: var(--secondary-bg);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   transition: transform 0.3s ease-in-out;
@@ -70,4 +70,8 @@ ul {
 
 mat-chip {
   margin: 4px;
+}
+
+.mat-card-header-text {
+  color: var(--primary-text);
 }
